2007-04-27  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/imagemap/imap_preferences.c
	* plug-ins/gflare/gflare.c
	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/xjt/xjt.c
	* plug-ins/metadata/xmp-parse.c
	* plug-ins/flame/flame.c
	* plug-ins/common/curve_bend.c
	* plug-ins/common/compressor.c
	* plug-ins/common/channel_mixer.c
	* plug-ins/common/mail.c
	* plug-ins/common/CML_explorer.c
	* plug-ins/ifscompose/ifscompose.c: Open files in binary mode
	("rb" and "wb").

2007-04-26  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.[ch]: renamed GimpParamSpecString's
	flag "no_validate" to "allow_non_utf8".

	* tools/pdbgen/app.pl
	* tools/pdbgen/pdb/*.pdb: renamed argument flag
	"no_validate" (which turns off utf8-validation for strings) to
	"allow_non_utf8" and renamed "no_success" (which turns off
	argument validation alltogether) to "no_validate".
	Doesn't affect generated code.

2007-04-26  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/display.pdb (diplay_is_valid)
	* tools/pdbgen/pdb/drawable.pdb (drawable_is_valid)
	* tools/pdbgen/pdb/image.pdb (image_is_valid)
	* tools/pdbgen/pdb/vectors.pdb (vectors_is_valid): it's the
	argument flag "no_success" which turns off validation, not
	"no_validate" (how obvious). Also fixed drawable and vectors
	procedures to check for !gimp_item_is_removed() instead of
	gimp_item_is_attached() (a newly created item is unattached
	but valid).

	* app/pdb/display_cmds.c
	* app/pdb/drawable_cmds.c
	* app/pdb/image_cmds.c
	* app/pdb/vectors_cmds.c: regenerated.

2007-04-26  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/pattern.pdb
	* tools/pdbgen/pdb/gradients.pdb
	* tools/pdbgen/pdb/brush_select.pdb
	* tools/pdbgen/pdb/context.pdb
	* tools/pdbgen/pdb/gradient.pdb
	* tools/pdbgen/pdb/palette.pdb
	* tools/pdbgen/pdb/procedural_db.pdb
	* tools/pdbgen/pdb/brushes.pdb
	* tools/pdbgen/pdb/palettes.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/brush.pdb