@@ -1,3 +1,8 @@
+2007-04-27  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/truchet.scm: fixed typo in procedure
+	name (bug #433772).
+
 2007-04-27  Mukund Sivaraman  <muks@mukund.org>
 
 	* plug-ins/imagemap/imap_preferences.c
@@ -28,7 +33,7 @@
 
 2007-04-26  Michael Natterer  <mitch@gimp.org>
 
-	* tools/pdbgen/pdb/display.pdb (diplay_is_valid)
+	* tools/pdbgen/pdb/display.pdb (display_is_valid)
 	* tools/pdbgen/pdb/drawable.pdb (drawable_is_valid)
 	* tools/pdbgen/pdb/image.pdb (image_is_valid)
 	* tools/pdbgen/pdb/vectors.pdb (vectors_is_valid): it's the
